fix: display issues on mobile
* changed info box in #home page from fixed to relative sizing
* modified banner and info text size to scale with media width

--- a/style.css
+++ b/style.css
@@ -89,9 +89,10 @@ nav ul {
   background: #000000CC;
   text-transform: none;
   border-radius: 15px;
+  max-width: 750px;
   font-size: 16px;
   padding: 15px;
-  width: 750px;
+  width: 85%;
 }
 
 #about ul,
@@ -486,6 +487,10 @@ h3 {
 }
 
 @media only screen and (max-width: 1100px) {
+  #banner, #event-info {
+    font-size: 12px;
+  }
+
   #about .container .col img {
     max-width: 40%;
   }
@@ -627,6 +632,10 @@ h3 {
 }
 
 @media only screen and (max-width: 580px) {
+  #banner, #event-info {
+    font-size: 10px;
+  }
+
   #splash-text {
     font-size: 0.8em;
   }
